@@ -1,4 +1,6 @@
 2006-04-05  Don Allingham  <don@gramps-project.org>
+	* src/GrampsDb/_ReadGedcom.py: support new lds stuff
+	* src/GrampsDb/_WriteGedcom.py: support new lds stuff
 	* src/Editors/_EditLdsOrd.py: save place information
 	* src/GrampsWidgets.py: select default value in menu
 	* src/BaseDoc.py: pylint
